--- a/index.html
+++ b/index.html
@@ -9,35 +9,55 @@
     <link rel="stylesheet" href="script.css" />
   </head>
   <body>
-    <div class="fixed-content">
-      <img src="assets/backstage.png" alt="" class="fixed-content__logo" />
-      <a href="#" class="fixed-content__email fixed-content--bold"
-        >info@backstagetalks.com</a
-      >
-      <div class="fixed-content__block">
-        <div class="fixed-content__groupText">
-          <div class="fixed-content__boldtext">
-            Backstage Talks is a magazine of casual, but in depth dialogues on
-            design and business. Our decisions shape and influence this complex
-            world—to have a chance to make the right ones, we need to talk.
-          </div>
-          <div class="fixed-content__smalltext">
-            © 2022
-            <a href="#" class="fixed-content__link"
-              >Published by studio Milk</a
-            >
-            <a href="" class="fixed-content__lonelink">Privacy Policy</a>
+    <div class="slide-container">
+      <div class="fixed-content">
+        <img src="assets/backstage.png" alt="" class="fixed-content__logo" />
+        <a href="#" class="fixed-content__email fixed-content--bold"
+          >info@backstagetalks.com</a
+        >
+        <div class="fixed-content__block">
+          <div class="fixed-content__groupText">
+            <div class="fixed-content__boldtext">
+              Backstage Talks is a magazine of casual, but in depth dialogues on
+              design and business. Our decisions shape and influence this complex
+              world—to have a chance to make the right ones, we need to talk.
+            </div>
+            <div class="fixed-content__smalltext">
+              © 2022
+              <a href="#" class="fixed-content__link"
+                >Published by studio Milk</a
+              >
+              <a href="" class="fixed-content__lonelink">Privacy Policy</a>
+            </div>
           </div>
         </div>
+        <ul class="fixed-content__list">
+          <li class="div fixed-content__listitem">Issue #6</li>
+          <li class="div fixed-content__listitem">Issue #5</li>
+          <li class="div fixed-content__listitem">Issue #4</li>
+          <li class="div fixed-content__listitem">Issue #3</li>
+          <li class="div fixed-content__listitem">Issue #2</li>
+          <li class="div fixed-content__listitem">Issue #1</li>
+        </ul>
       </div>
-      <ul class="fixed-content__list">
-        <li class="div fixed-content__listitem">Issue #6</li>
-        <li class="div fixed-content__listitem">Issue #5</li>
-        <li class="div fixed-content__listitem">Issue #4</li>
-        <li class="div fixed-content__listitem">Issue #3</li>
-        <li class="div fixed-content__listitem">Issue #2</li>
-        <li class="div fixed-content__listitem">Issue #1</li>
-      </ul>
+      <section class="slide slide--white">
+          <img src="#" alt="" class="slide__img">
+          <div class="slide__issue">Issue #6</div>
+          <div class="slide__buyhere slide--pink">Buy Here</div>
+          <div class="slide__selectedstores">or in<span class="slide--pink">selected stores</span></div>
+      </section>
+      <section class="slide slide--lightblue">
+          <img src="#" alt="" class="slide__img">
+          <div class="slide__issue">Issue #5</div>
+          <div class="slide__buyhere slide--pink">Buy Here</div>
+          <div class="slide__selectedstores">or in<span class="slide--pink">selected stores</span></div>
+      </section>
+      <section class="slide slide--orange">
+        <img src="#" alt="" class="slide__img">
+        <div class="slide__issue">Issue #5</div>
+        <div class="slide__buyhere slide--pink">Buy Here</div>
+        <div class="slide__selectedstores">or in<span class="slide--pink">selected stores</span></div>
+    </section>
     </div>
   </body>
 </html>
