--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- WEBSITE TITLE -->
-    <title>My Website</title>
+    <title>Restaurants</title>
 
     <!-- WEBSITE DESCRIPTION -->
     <meta name="description" content="This is my cool website!" />
@@ -23,41 +23,11 @@
     />
 
     <!-- CSS STYLE LINK -->
-    <!-- <link rel="stylesheet" href="../src/reset.css" />
-    <link rel="stylesheet" href="../src/base.css" /> -->
 
     <!--Javascript SCRIPT-->
-    <!-- <script src="dist/main.js" defer ></script> -->
-    <!-- <script src="../src/index.js" defer></script> -->
-    <script src="bundle.js" defer></script>
-  </head>
+  <script defer src="bundle.js"></script></head>
   <body>
-    <!-- WEBSITE CONTENT GOES HERE -->
-    <!-- <div class="hero-background">
-      <header class="header">
-        <div class="header__logo">Panny</div>
-        <ul class="header__tab-list">
-          <li class="header__tab"><a href="" class="header__link header__link--orange header__link--home">Home</a></li>
-          <li class="header__tab ">
-            <a href="" class="header__link header__link--recipes">Recipes</a>
-          </li>
-          <li class="header__tab header__arrow">
-            <a href="" class="header__link header__link--services">Services</a>
-          </li>
-          <li class="header__tab"><a href="" class="header__link header__link--about">About</a></li>
-          <li class="header__tab"><a href="" class="header__link header__link--news">News</a></li>
-        </ul>
-        <button class="header__button">Contact Us</button>
-      </header>
-      <div class="hero-block">
-        <h1 class="hero-block__bigText">Enjoy your food <br> with Panny</h1>
-        <p class="hero-block__smallText">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut,
-          architecto
-        </p>
-        <button class="hero-block__button">Get Started</button>
-      </div>
-    </div> -->
+    
     <div class="content"></div>
   </body>
 </html>
