--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <!-- CSS STYLE LINK -->
 
     <!--Javascript SCRIPT-->
-  <script defer src="bundle.js"></script></head>
+  </head>
   <body>
     
     <div class="content"></div>
